k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foot-app-service
spec:
  selector:
    app: foot-app
  ports:
    - protocol: TCP
      port: 80       # Traefik redirige vers ce port depuis HTTPS
      targetPort: 6000   # Port où votre app écoute à l'intérieur du pod
      nodePort: 30500
  type: NodePort
