k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foot-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: foot.local  # Vous pouvez ajouter cette entrée dans votre fichier /etc/hosts
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foot-app-service
            port:
              number: 80
  # Configuration pour l'accès direct via IP sans nom d'hôte
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foot-app-service
            port:
              number: 80
